src/test/resources/typeSystemTestModels/valid/constructors/ConstructorsNoDuplicateSignature.java
package typeSystemTestModels.valid.constructors;

public class ConstructorsNoDuplicateSignature {

  public ConstructorsNoDuplicateSignature(){

  }

  public ConstructorsNoDuplicateSignature(int n) {

  }
}
