src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorModifiersValid.java
package typeSystemTestModels.invalid.constructors;

public class ConstructorModifiersValid{

  abstract ConstructorModifiersValid(){

  }

  final ConstructorModifiersValid(){

  }

  static ConstructorModifiersValid(){

  }

  native ConstructorModifiersValid(){

  }
}